--- a/style.css
+++ b/style.css
@@ -1,5 +1,39 @@
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 10;
 }
+h1
+{
+  text-align: center;
+}
+img{
+  display: grid;
+  margin-left: auto;
+  width: 40%;
+}
+nav
+{
+  text-align: center;  
+}
+figcaption{
+  text-align: center;
+  font-size: 90%;
+}
+#featured-property  p {
+  width: 800 px;
+  padding: 10px;
+}
+#details div  {
+  Float: left;
+background-color: red;
+Text- align: center;
+Width: 25%;
+}
+   
+
+
+
+
+
+
